# ouija

./: CHANGELOG.md  Makefile  NOTICE  POST_V01.md  README.md  mcp.catalog.json  output.md  pyproject.toml  test-output.txt
.github/workflows/: ci.yml
ouija/: __init__.py  agentic_cli.py  agentic_mutate.py  agentic_report.py  agentic_scan.py  allowlist.py  asitax.py  baseline.py  canary.py  cli.py  client.py  conversation.py  detect.py  encoders.py  findings.py  gate.py  indirect.py  mcp_proto.py  mcp_server.py  models.py  mutate.py  notify.py  oob.py  oracle.py  plan.py  report.py  sarif.py  scanner.py  scope.py
ouija/corpus/: __init__.py  activecontent.json  agency.json  disclosure.json  dos.json  exfil.json  injection.json  misinfo.json  outputintegrity.json  pii.json  promptextract.json  ragpoison.json  safetybypass.json  supplychain.json
ouija/lab/: __init__.py  lab_agent.py  poisoned_mcp.py  rag_agent.py  tools.py
ouija/modules/: __init__.py  _lint.py  baseline_garak.py  excessive_agency.py  extraction.py  indirect_pi.py  mcp_fuzz.py
ouija/seeds/: __init__.py  asi01_tool_result.json  asi02_excessive_agency.json  asi05_code_exec.json  asi06_rag_behavioral.json  asi07_inter_agent.json  asi08_cascading_failures.json  asi09_trust_exploit.json  asi10_rogue_agents.json
ouija/targets/: __init__.py  agent.py  base.py  mcp.py  rag.py  raw_llm.py
tests/: conftest.py  mock_llm.py  test_activecontent.py  test_agency.py  test_baseline.py  test_cli.py  test_corpus.py  test_dos.py  test_exfil.py  test_finding_id.py  test_format_csv.py  test_format_html.py  test_format_jira.py  test_format_json.py  test_format_jsonl.py  test_format_markdown_table.py  test_format_opsgenie.py  test_format_pagerduty.py  test_format_sarif.py  test_format_slack.py  test_format_teams.py  test_format_victorops.py  test_gate.py  test_indirect.py  test_misinfo.py  test_multiturn.py  test_mutators.py  test_notify.py  test_outputintegrity.py  test_pii.py  test_plan.py  test_promptextract.py  test_ragpoison.py  test_repeats.py  test_response_path.py  test_retries.py  test_safetybypass.py  test_scope.py  test_smoke.py  test_summary_stats.py  (+4 more)
tests/agentic/: conftest.py  test_acceptance.py  test_agentic_report.py  test_cli.py  test_foundation.py  test_lab.py  test_lint.py  test_mcp_fuzz.py  test_mcp_server.py  test_modules.py  test_seeds.py  test_targets.py
tests/fixtures/: scope.txt
