[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouija"
version = "0.1.0"
description = "A bug-bounty-aligned LLM endpoint fuzzer for finding ship-able findings against production LLM-powered HTTP endpoints."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Bugsy Hewitt" }]
keywords = ["llm", "security", "fuzzing", "prompt-injection", "bug-bounty", "owasp"]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
ouija = "ouija.cli:main"

[project.urls]
Homepage = "https://github.com/bugsyhewitt/ouija"

[tool.hatch.build.targets.wheel]
packages = ["ouija"]

[tool.hatch.build.targets.wheel.force-include]
"ouija/corpus" = "ouija/corpus"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
