[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouija"
version = "0.5.1"
description = "The agentic / RAG / tool-call / MCP-server fuzzer: points at a deployed AI application (chatbot+RAG, tool-using agent, or MCP server) and proves whether an attacker can make it do something it shouldn't, with a data-flow success oracle. Also a bug-bounty-aligned single-endpoint LLM fuzzer."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Bugsy Hewitt" }]
keywords = ["llm", "security", "fuzzing", "prompt-injection", "bug-bounty", "owasp", "agent", "rag", "mcp", "red-team", "agentic"]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
# Optional: the real MCP Python SDK, only needed to reach a LIVE streamable-HTTP
# MCP server (the in-process lab + tests need neither). ouija ships its own
# minimal MCP impl so the core stays dependency-light.
mcp = [
  "mcp>=1.0",
]
# Optional: garak owns the static I/O jailbreak/toxicity baseline (§6, ADR D3).
# ouija shells out to it; the parser is tested against a fixture without it.
garak = [
  "garak>=0.9",
]

[project.scripts]
ouija = "ouija.cli:main"
ouija-agentic = "ouija.agentic_cli:main"

[project.urls]
Homepage = "https://github.com/bugsyhewitt/ouija"

[tool.hatch.build.targets.wheel]
packages = ["ouija"]

[tool.pytest.ini_options]
testpaths = ["tests"]
